--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         // Resident Data
         const residents = [
             {
-                username: "Mehak",
+                username: "Mehk",
                 password: "Oak2",
                 name: "Mehak",
                 phone: "64755",
